# prac

./: .gitignore  main.ipynb  main.py  pyproject.toml
models/: attentions.py  gpt2.py  test.ipynb
